# pdf_generator

./: pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/: main.py  test.py  test_1.py  test_generator.py  test_new_tables.py
src/cli/: commands.py
src/config/: settings.py
src/data_conversion/: ankieta_ods.py  json_builder.py  ods_parser.py
src/gui/: app.py
src/pdf_generation/: generator.py  generator.py.old  tables.py
src/project_managment/: file_ops.py  manager.py
