[project]
name = "pdf-generator-for-mom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "charset-normalizer==3.4.4",
    "ezodf==0.3.2",
    "lxml==6.0.2",
    "pillow==12.0.0",
    "pyqt6==6.10.0",
    "pyqt6-qt6==6.10.0",
    "pyqt6-sip==13.10.2",
    "reportlab==4.4.4",
]
